# kabu_futures

./: .gitignore  README.md  kabu_futures策略.txt  main.py  pyproject.toml  日本先物策略.txt  股票数字货币外汇期货策略总结.txt
config/: defaults.json  local.example.json  micro_candidate_gray.example.json  micro_ofi_gray.example.json
data/: sample_market_data.jsonl
docs/: ai_strategy_evolution_framework.md  kabu_micro225_minitopix_dual_strategy.md  log_review.md
scripts/: analyze_micro_evolution.py  auto_evolve.py  candidate_review.py  promotion_check.py  tune_micro_params.py  walk_forward.py
src/kabu_futures/: __init__.py  __main__.py  alpha.py  analysis_utils.py  api.py  config.py  diagnostics_funnel.py  diagnostics_scoring.py  engine.py  evolution.py  execution.py  indicators.py  live.py  live_api_health.py  live_execution.py  live_safety.py  live_state.py  log_diagnostics.py  marketdata.py  micro_candidates.py  microstructure.py  models.py  multitimeframe.py  orders.py  paper_execution.py  policy.py  promotion.py  regime.py  replay.py  risk.py  runtime.py  serialization.py  sessions.py  simulator.py  strategies.py  tuning.py  utils.py  walk_forward.py
tests/: test_core.py
