[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kabu-futures"
version = "0.1.0"
description = "Dual-layer kabu Station API strategy framework for Micro225 and miniTOPIX futures."
requires-python = ">=3.10"
dependencies = [
    "websocket-client>=1.8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
